# wg_task2

./: Makefile  README.md  main.py  pyproject.toml  pytest.ini
engine/core/: engine2d.py
engine/shapes/: base.py  circle.py  rectangle.py  triangle.py
tests/: conftest.py  test_engine.py  test_shapes.py
