[tool.poetry]
name = "task2"
version = "0.1.0"
description = ""
authors = ["Roman Balyuk <rbalyuk@ptsecurity.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.8"
pytest = "8.3.4"

[tool.poetry.group.dev.dependencies]
black="25.1.0"
ruff="0.9.4"
flake8="7.1.1"
isort="6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

